--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Nunito Sans", "FZLanTingHeiS-R-GB", "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif !important;
+  font-family: "Nunito Sans", "FZLanTingHeiS-R-GB", "Microsoft YaHei", SimSun, Heiti, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
