--- a/src/views/home.scss
+++ b/src/views/home.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   .section-one {
-    background: rgba(0, 0, 0, 0.9);
+    background: url('/images/bg.png');
     height: calc(100vh - 8rem);
     position: relative;
 
