--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -85,7 +85,7 @@
       width: 100%;
       height: 10rem;
       background-image: linear-gradient(105.52deg, #1E1E1E 0%, #020202 100%);
-      padding: 4px 10%;
+      padding: 4px;
       display: flex;
       flex-direction: column;
       align-items: center;
