--- a/src/views/company.scss
+++ b/src/views/company.scss
@@ -15,22 +15,32 @@
 
     > .group {
       display: flex;
-      flex-direction: column;
+      // flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100%;
       width: 100%;
 
       img {
-        height: 8rem;
-        width: auto;
-        margin-bottom: 2rem;
+        width: 20%;
+        margin-right: 6rem;
       }
 
       .description {
-        font-size: 2rem;
-        color: #cccccc;
-        text-align: center;
+        font-size: 2.25rem;
+        color: #ffffff;
+        line-height: 1.5;
+        font-weight: bold;
+        // text-align: center;
+
+        .text-strong {
+          font-size: 2.5rem;
+          position: relative;
+          color: #88FFBF;
+          background-image: linear-gradient(45deg, #12A9AF 0%, #63E3DD 33%, #88FFBF 66%, #CEA7FF 100%);
+          background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
       }
     }
   }
@@ -55,9 +65,12 @@
       }
 
       > .left-col {
-        justify-content: flex-end;
         text-align: right;
         margin-right: 1rem;
+
+        .partner-box {
+          justify-content: flex-end;
+        }
 
         .info {
           margin-right: 1rem;
@@ -66,7 +79,6 @@
       }
 
       > .right-col {
-        justify-content: flex-start;
         text-align: left;
         margin-left: 1rem;
         padding-top: 8rem;
@@ -122,8 +134,26 @@
       display: flex;
       flex-direction: column;
 
+      .avatar {
+        margin-right: 2rem;
+      }
+
       @media (min-width: 768px) {
         display: none;
+      }
+    }
+
+    .team-group.think-tank-group {
+      .right-col {
+        padding-top: 0;
+      }
+
+      .partner-box {
+        flex-direction: column;
+
+        .avatar {
+          margin-bottom: 2rem;
+        }
       }
     }
   }
