--- a/src/views/metis_way.scss
+++ b/src/views/metis_way.scss
@@ -1,4 +1,4 @@
-.metis_fe--protocol-section-container {
+.metis_fe--metisway-section-container {
   .title {
     color: #ffffff;
     line-height: 2;
@@ -10,46 +10,39 @@
   }
 
   .one-container {
-    padding: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
-    @media(min-width: 768px) {
-      flex-direction: row;
-      justify-content: space-around;
+    padding: 5rem 2rem;
+
+    .description {
+      line-height: 2;
+      text-align: center;
+      color: #cccccc;
+      font-size: 1.25rem;
     }
 
-    .block {
-      width: 23rem;
-      height: 23rem;
-      border-radius: 8px 0px 0px 8px;
-      background: linear-gradient(125.43deg, #3A3A3A 0%, #222222 25%, #020202 78%);
-      color: #cccccc;
-      display: flex;
-      justify-self: center;
-      align-items: center;
-      font-size: 1.5rem;
-      padding: 2rem;
-      line-height: 2;
-      margin: 2rem;
+    .preview-img {
+      width: 80%;
+      transform: translateX(5%);
+      margin-top: 3rem;
     }
   }
 
   .section-two {
-    background: linear-gradient(105.52deg, #1E1E1E 0%, #020202 100%);
+    background: linear-gradient(105.52deg, rgba(30,30,30,1) 0%, rgba(2,2,2,1) 100%);
   }
 
   .two-container {
     display: flex;
     flex-direction: column;
-    padding: 5rem 0;
+    padding: 5rem 2rem;
 
     .sub-title {
       color: #cccccc;
       line-height: 2;
       text-align: center;
+      font-size: 1.25rem;
     }
 
     .preview-img {
@@ -72,7 +65,18 @@
   .three-container {
     display: flex;
     flex-direction: column;
-    padding: 5rem 0;
+    align-items: center;
+    padding: 5rem 2rem;
+
+    .description {
+      color: #cccccc;
+      line-height: 2;
+      font-size: 1.25rem;
+
+      .items-list {
+        padding-left: 2rem;
+      }
+    }
 
     .preview-img {
       margin: 2rem 0;
@@ -88,15 +92,48 @@
   }
 
   .section-four {
+    background: linear-gradient(105.52deg, rgba(30,30,30,1) 0%, rgba(2,2,2,1) 100%);;
+  }
+
+  .four-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 2rem;
+
+    .description {
+      color: #cccccc;
+      line-height: 2;
+      font-size: 1.25rem;
+
+      .items-list {
+        padding-left: 2rem;
+      }
+    }
+
+    .preview-img {
+      margin: 2rem 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+
+      img {
+        margin: 2rem 0;
+        width: 80%;
+      }
+    }
+  }
+
+  .section-five {
     background: linear-gradient(105.52deg, #1E1E1E 0%, #020202 100%);
   }
 
   @media (min-width: 768px) {
-    .four-container {
+    .five-container {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 5rem 1rem;
+      padding: 10rem 2rem;
 
       .title {
         text-align: left;
@@ -109,11 +146,11 @@
       }
 
       .info-part {
-        flex: 1;
+        flex: 4;
       }
 
       .preview-img {
-        flex: 2;
+        flex: 5;
         margin-left: 2rem;
 
         img {
@@ -124,11 +161,11 @@
   }
 
   @media (max-width: 767px) {
-    .four-container {
+    .five-container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 5rem 1rem;
+      padding: 5rem 2rem;
 
       .title {
         margin-bottom: 2rem;
@@ -137,6 +174,7 @@
       .description {
         color: #cccccc;
         text-align: center;
+        font-size: 1.25rem;
       }
 
       .info-part {
