--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: "Nunito Sans", "FZLanTingHeiS-R-GB", "Microsoft YaHei", SimSun, Heiti, sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Nunito Sans", sans-serif !important;
 }
 
 code {
