--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -13,7 +13,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 4rem;
+      height: 3.3rem;
       background-image: linear-gradient(105.52deg, #1E1E1E 0%, #020202 100%);
       padding: 0 10%;
       display: flex;
@@ -47,8 +47,9 @@
           > a {
             color: #efefef;
             text-decoration: none;
-            font-size: 1rem;
-            padding: 1.5rem 1rem;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 1rem;
             position: relative;
           }
   
@@ -56,7 +57,7 @@
             &:after {
               content: "";
               position: absolute;
-              bottom: 4px;
+              bottom: -1px;
               left: 0;
               width: 100%;
               height: 4px;
@@ -72,6 +73,12 @@
         align-items: center;
         text-decoration: none;
         color: #01bCb1;
+        font-size: 14px;
+        font-weight: bold;
+
+        > svg {
+          margin-left: 8px;
+        }
       }
     }
   }
@@ -147,7 +154,7 @@
   }
 
   .metis_fe--layout-content {
-    padding-top: 4rem;
+    padding-top: 3.3rem;
     height: 100vh;
     width: 100%;
     position: relative;
@@ -166,6 +173,8 @@
   .metis_fe--layout-footer {
     height: 4rem;
     font-size: 1rem;
+    line-height: 3;
+    font-weight: 200;
     display: flex;
     align-items: center;
     justify-content: center;
