--- a/src/views/metis_way.scss
+++ b/src/views/metis_way.scss
@@ -1,8 +1,9 @@
 .metis_fe--metisway-section-container {
   .title {
     color: #ffffff;
-    line-height: 2;
+    line-height: 1.2;
     text-align: center;
+    margin-bottom: 2.5rem;
   }
 
   .section-one {
@@ -16,7 +17,7 @@
     padding: 5rem 2rem;
 
     .description {
-      line-height: 2;
+      line-height: 1.6;
       text-align: center;
       color: #cccccc;
       font-size: 1.25rem;
@@ -25,7 +26,7 @@
     .preview-img {
       width: 80%;
       transform: translateX(5%);
-      margin-top: 3rem;
+      margin-top: 2rem;
     }
   }
 
@@ -40,7 +41,7 @@
 
     .sub-title {
       color: #cccccc;
-      line-height: 2;
+      line-height: 1.6;
       text-align: center;
       font-size: 1.25rem;
     }
@@ -70,7 +71,7 @@
 
     .description {
       color: #cccccc;
-      line-height: 2;
+      line-height: 1.6;
       font-size: 1.25rem;
 
       .items-list {
@@ -103,7 +104,7 @@
 
     .description {
       color: #cccccc;
-      line-height: 2;
+      line-height: 1.6;
       font-size: 1.25rem;
 
       .items-list {
@@ -137,12 +138,14 @@
 
       .title {
         text-align: left;
-        margin-bottom: 2rem;
+        margin-bottom: 2.5rem;
+        line-height: 1.2;
       }
 
       .description {
         color: #cccccc;
         text-align: left;
+        font-size: 1.25rem;
       }
 
       .info-part {
@@ -168,8 +171,8 @@
       padding: 5rem 2rem;
 
       .title {
-        margin-bottom: 2rem;
-      }
+        margin-bottom: 2.5rem;
+      }∂
 
       .description {
         color: #cccccc;
