--- a/src/views/roadmap.scss
+++ b/src/views/roadmap.scss
@@ -8,7 +8,7 @@
   .page-next,
   .page-prev {
     position: absolute;
-    top: 3rem;
+    top: 5.25rem;
     transform: translateY(-50%);
     font-size: 2.5rem;
     cursor: pointer;
@@ -39,6 +39,7 @@
   .roadmap-item {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 0 5rem;
     width: 33%;
     position: relative;
@@ -49,38 +50,42 @@
     }
 
     .item-icon {
-      // width: 140px;
-      // height: 140px;
+      width: 8.75rem;
+      height: 8.75rem;
       margin-bottom: 3rem;
       display: flex;
       justify-content: center;
+      align-items: center;
     }
 
     .item-title {
       font-size: 1.5rem;
       color: #ffffff;
-      line-height: 2.5rem;
+      line-height: 1.6;
       text-align: center;
+      font-weight: bold;
     }
 
     .item-date {
-      font-size: 1rem;
+      font-size: 1.5rem;
       color: #cccccc;
       margin-bottom: 2.5rem;
       text-align: center;
+      font-weight: 200;
     }
 
     .item-description {
       font-size: 1rem;
-      color: #cccccc;
+      color: rgba(204,204,204,1);
       line-height: 2rem;
+      font-weight: 200;
     }
   }
 
   .split-line {
     content: "";
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: -1.75rem;
     height: 1px;
     width: 3.5rem;
