--- a/src/views/learn.scss
+++ b/src/views/learn.scss
@@ -45,18 +45,35 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border: 2px solid #01bcb1;
-        border-radius: 50%;
         height: 4.5rem;
         width: 4.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 3;
 
         > img {
           width: 2rem;
           height: 2rem;
         }
+      }
+
+      > .preview-img-active {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-position: center center;
+        background-repeat: no-repeat;
+        -webkit-background-size:cover;
+        -moz-background-size:cover;
+        background-size: cover;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+
+      &:hover > .preview-img-active {
+        z-index: 2;
       }
     }
 
